// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and check 1`] = `
<a
  aria-checked={false}
  className="display-inline-flex-center link-checkbox"
  href="#"
  onClick={[Function]}
  role="radio"
>
  <i
    className="icon-radio spacer-right"
  />
</a>
`;

exports[`should render and check 2`] = `
<a
  aria-checked={true}
  className="display-inline-flex-center link-checkbox"
  href="#"
  onClick={[Function]}
  role="radio"
>
  <i
    className="icon-radio spacer-right is-checked"
  />
</a>
`;
